--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<link rel="icon" type="text/png" href="https://thumbs.dreamstime.com/b/user-account-icon-person-solid-logo-illustration-pictog-pictogram-isolated-white-90235639.jpg">
 
-	<link rel="stylesheet" type="text/css" href="D:\Coursera\Guided Projects\Build Your Portfolio Website with HTML and CSS\portfolio website codes\master.css">
+	<link rel="stylesheet" type="text/css" href="https://cybercat37794.github.io/imranahmed.github.io/css/master.css">
 
 	<meta name="viewport" content="width=device-width, initial-scale1, shrink-to-fit=no">
 	<meta name="name" content="Imran Ahmed's Portal">
@@ -25,7 +25,7 @@
     <h2>Credentials and Portfolio</h2>
 
     <p>
-    	<a href="D:\Coursera\Guided Projects\Build Your Portfolio Website with HTML and CSS\portfolio website codes\resume.html">My Resume </a><a href="D:\Coursera\Guided Projects\Build Your Portfolio Website with HTML and CSS\portfolio website codes\resume.html"><img src="https://www.netclipart.com/pp/m/11-110796_download-free-png-and-vector-resume-logo.png"alt="Resume" width="2%"></a>
+    	<a href="https://cybercat37794.github.io/imranahmed.github.io/resume.html">My Resume </a><a href="https://cybercat37794.github.io/imranahmed.github.io/resume.html"><img src="https://www.netclipart.com/pp/m/11-110796_download-free-png-and-vector-resume-logo.png"alt="Resume" width="2%"></a>
     	| 
     	<a href="https://github.com/cybercat37794"target="_blank">My Github </a><a href="https://github.com/cybercat37794" target="_blank"><img src="https://avatars1.githubusercontent.com/u/9919?s=200&v=4"alt="Github" width="3%"></a>
     </p>
