--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 
 	<link rel="icon" type="text/png" href="https://thumbs.dreamstime.com/b/user-account-icon-person-solid-logo-illustration-pictog-pictogram-isolated-white-90235639.jpg">
 
-	<link rel="stylesheet" type="text/css" href="D:\Coursera\Guided Projects\Build Your Portfolio Website with HTML and CSS\portfolio website codes\master.css">
+	<link rel="stylesheet" type="text/css" href="https://cybercat37794.github.io/imranahmed.github.io/css/master.css">
 
 	<meta name="viewport" content="width=device-width, initial-scale1, shrink-to-fit=no">
 	<meta name="name" content="Imran Ahmed's Portal">
@@ -51,7 +51,7 @@
 		<li>Drawing and Illustration</li>
 	</ul>
 
-	<p><a href="D:\Coursera\Guided Projects\Build Your Portfolio Website with HTML and CSS\portfolio website codes\index.html">Back to my portal</a></p>
+	<p><a href="https://cybercat37794.github.io/imranahmed.github.io/index.html">Back to my portal</a></p>
 
 </body>
 </html>
