first test commit

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<title>Imran Ahmed's Portal</title>
 
-	<link rel="icon" type="text/png" href="https://thumbs.dreamstime.com/b/user-account-icon-person-solid-logo-illustration-pictog-pictogram-isolated-white-90235639.jpg">
+	<link rel="icon" type="text/png"
+		href="https://thumbs.dreamstime.com/b/user-account-icon-person-solid-logo-illustration-pictog-pictogram-isolated-white-90235639.jpg">
 
 	<link rel="stylesheet" type="text/css" href="https://cybercat37794.github.io/imranahmed/css/master.css">
 
@@ -13,28 +15,34 @@
 	<meta name="robots" content="noindex, nofollow">
 
 </head>
+
 <body>
 	<img src="https://wallpapercave.com/wp/zuiHX0K.jpg" width="75%" alt="banner">
 
 	<h1>Imran Ahmed's Portal</h1>
 	<h2>About Me</h2>
-	<p>I am a computer science student in Dhaka, Bangladesh.</p>
+	<p>I am a Master of Applied Computing student in Windsor, Ontario.</p>
 	<p>I am studing BS of computer science from the American International University - Bangladesh.</p>
 	<p>I am currently developing other cs skills along side with the study.</p>
 
-    <h2>Credentials and Portfolio</h2>
+	<h2>Credentials and Portfolio</h2>
 
-    <p>
-    	<a href="https://cybercat37794.github.io/imranahmed/resume.html">My Resume </a><a href="https://cybercat37794.github.io/imranahmed/resume.html"><img src="https://www.netclipart.com/pp/m/11-110796_download-free-png-and-vector-resume-logo.png"alt="Resume" width="2%"></a>
-    	| 
-    	<a href="https://github.com/cybercat37794"target="_blank">My Github </a><a href="https://github.com/cybercat37794" target="_blank"><img src="https://avatars1.githubusercontent.com/u/9919?s=200&v=4"alt="Github" width="3%"></a>
-    </p>
+	<p>
+		<a href="https://cybercat37794.github.io/imranahmed/resume.html">My Resume </a><a
+			href="https://cybercat37794.github.io/imranahmed/resume.html"><img
+				src="https://www.netclipart.com/pp/m/11-110796_download-free-png-and-vector-resume-logo.png"
+				alt="Resume" width="2%"></a>
+		|
+		<a href="https://github.com/cybercat37794" target="_blank">My Github </a><a
+			href="https://github.com/cybercat37794" target="_blank"><img
+				src="https://avatars1.githubusercontent.com/u/9919?s=200&v=4" alt="Github" width="3%"></a>
+	</p>
 
-    <h2>Contact</h2>
+	<h2>Contact</h2>
 
-    <p>Email:
-    	<a href="mailto:imran.ahmed.37794@gmail.com">imran.ahmed.37794@gmail.com</a>
-    </p>
+	<p>Email:
+		<a href="mailto:imran.ahmed.37794@gmail.com">imran.ahmed.37794@gmail.com</a>
+	</p>
 
 </body>
 
@@ -43,6 +51,7 @@
 	<code>Copyright (c) 2020 Imran Ahmed</code>
 
 
-	
+
 </footer>
+
 </html>
