--- a/index.html
+++ b/index.html
@@ -2,56 +2,113 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<title>Imran Ahmed's Portal</title>
-
-	<link rel="icon" type="text/png"
-		href="https://thumbs.dreamstime.com/b/user-account-icon-person-solid-logo-illustration-pictog-pictogram-isolated-white-90235639.jpg">
-
-	<link rel="stylesheet" type="text/css" href="https://cybercat37794.github.io/imranahmed/css/master.css">
-
-	<meta name="viewport" content="width=device-width, initial-scale1, shrink-to-fit=no">
-	<meta name="name" content="Imran Ahmed's Portal">
-	<meta name="robots" content="noindex, nofollow">
-
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Your Portfolio</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<img src="https://wallpapercave.com/wp/zuiHX0K.jpg" width="75%" alt="banner">
+	<header>
+		<h1>Imran Ahmed</h1>
+		<h2>Student | Master of Applied Computing | University of Windsor</h2>
+	</header>
 
-	<h1>Imran Ahmed's Portal</h1>
-	<h2>About Me</h2>
-	<p>I am a Master of Applied Computing student in Windsor, Ontario.</p>
-	<p>I am studing BS of computer science from the American International University - Bangladesh.</p>
-	<p>I am currently developing other cs skills along side with the study.</p>
+	<section id="about">
+		<h3>About Me</h3>
+		<p>As a Master of Applied Computing student, I am eager to apply my skills and knowledge to the fields of
+			artificial intelligence, machine learning, deep learning, and data science. Throughout my studies and
+			various projects, I have gained experience in programming languages and developed my understanding of
+			algorithms, data structures, and software development principles. I am a proactive learner and always
+			looking to improve my skills.</p>
+	</section>
 
-	<h2>Credentials and Portfolio</h2>
+	<section id="experience">
+		<h3>Experience</h3>
+		<ul>
+			<li>Field Marketing Representative at Kognitive Sales Solution (Present)</li>
+			<li>Student Intern at American International University Bangladesh (May 2022 - Aug 2022)</li>
+		</ul>
+	</section>
 
-	<p>
-		<a href="https://cybercat37794.github.io/imranahmed/resume.html">My Resume </a><a
-			href="https://cybercat37794.github.io/imranahmed/resume.html"><img
-				src="https://www.netclipart.com/pp/m/11-110796_download-free-png-and-vector-resume-logo.png"
-				alt="Resume" width="2%"></a>
-		|
-		<a href="https://github.com/cybercat37794" target="_blank">My Github </a><a
-			href="https://github.com/cybercat37794" target="_blank"><img
-				src="https://avatars1.githubusercontent.com/u/9919?s=200&v=4" alt="Github" width="3%"></a>
-	</p>
+	<section id="education">
+		<h3>Education</h3>
+		<ul>
+			<li>Degree in Field, University Name (Year)</li>
+			<li>Degree in Field, University Name (Year)</li>
+		</ul>
+	</section>
 
-	<h2>Contact</h2>
+	<section id="certifications">
+		<h3>Certification Courses</h3>
+		<ul>
+			<li>Course Name, Institution (Year)</li>
+			<li>Course Name, Institution (Year)</li>
+		</ul>
+	</section>
 
-	<p>Email:
-		<a href="mailto:imran.ahmed.37794@gmail.com">imran.ahmed.37794@gmail.com</a>
-	</p>
+	<section id="projects">
+		<h3>Projects</h3>
+		<div class="project">
+			<img src="project-thumbnail.jpg" alt="Project Thumbnail">
+			<h4>Project Title</h4>
+			<p>Short description of the project.</p>
+		</div>
+		<div class="project">
+			<img src="project-thumbnail.jpg" alt="Project Thumbnail">
+			<h4>Project Title</h4>
+			<p>Short description of the project.</p>
+		</div>
+	</section>
 
+	<section id="workshops">
+		<h3>Workshops</h3>
+		<div class="workshop">
+			<img src="workshop-thumbnail.jpg" alt="Workshop Thumbnail">
+			<h4>Workshop Title 1</h4>
+		</div>
+		<div class="workshop">
+			<img src="workshop-thumbnail.jpg" alt="Workshop Thumbnail">
+			<h4>Workshop Title 2</h4>
+		</div>
+	</section>
+
+	<section id="events">
+		<h3>Events</h3>
+		<div class="event">
+			<img src="event-thumbnail.jpg" alt="Event Thumbnail">
+			<h4>Event Title 1</h4>
+		</div>
+		<div class="event">
+			<img src="event-thumbnail.jpg" alt="Event Thumbnail">
+			<h4>Event Title 2</h4>
+		</div>
+	</section>
+
+	<section id="skills">
+		<h3>Skills</h3>
+		<div class="skills">
+			<div class="skill">
+				<img src="path/to/logo1.png" alt="Logo 1">
+				<p>Language 1</p>
+			</div>
+			<div class="skill">
+				<img src="path/to/logo2.png" alt="Logo 2">
+				<p>Language 2</p>
+			</div>
+			<!-- Add more skills as needed -->
+		</div>
+	</section>
+
+	<section id="contact">
+		<h3>Contact Info</h3>
+		<p>Email: your.email@example.com</p>
+		<p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
+	</section>
+
+	<footer>
+		<p>&copy; 2023 Your Name. All rights reserved.</p>
+	</footer>
 </body>
-
-<footer>
-	<hr>
-	<code>Copyright (c) 2020 Imran Ahmed</code>
-
-
-
-</footer>
 
 </html>
