new added in html

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 	<section id="education">
 		<h3>Education</h3>
 		<ul>
-			<li>Degree in Field, University Name (Year)</li>
-			<li>Degree in Field, University Name (Year)</li>
+			<li>Master of Applied Computing, University of Windsor (Present)</li>
+			<li>Bachelor of Science in Computer Science and Engineering, American International University Bangladesh
+				(2018 - 2022)</li>
 		</ul>
 	</section>
 
