first new commit

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<title>
 		Portfolio
 	</title>
+	<link rel="icon"
+		href="https://github.com/cybercat37794/imranahmed/blob/master/page%20graphics/fevicon_on_tab.png?raw=true"
+		type="image/x-icon">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet" />
 	<style>
@@ -168,7 +171,8 @@
 
 <body>
 	<header>
-		<img alt="Portrait of Imran Ahmed" height="500" src="https://avatars.githubusercontent.com/u/68174387?v=4"
+		<img alt="Website Background" height="500"
+			src="https://github.com/cybercat37794/imranahmed/blob/master/page%20graphics/website_background_BnW.png?raw=true"
 			width="1200" />
 		<h1>
 			Hello, I'm
