--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		}
 
 		.portfolio,
-		.resume,
+		.academics_n_career,
 		.services,
 		.blog,
 		.contact {
@@ -64,7 +64,7 @@
 		}
 
 		.portfolio h2,
-		.resume h2,
+		.academics_n_career h2,
 		.services h2,
 		.blog h2,
 		.contact h2 {
@@ -74,7 +74,7 @@
 
 		.portfolio .categories,
 		.portfolio .items,
-		.resume .content,
+		.academics_n_career .content,
 		.services .content,
 		.blog .content,
 		.contact .content {
@@ -98,7 +98,7 @@
 		}
 
 		.portfolio .items .item,
-		.resume .content .section,
+		.academics_n_career .content .section,
 		.services .content .service,
 		.blog .content .post {
 			background-color: #444;
@@ -116,7 +116,7 @@
 		}
 
 		.portfolio .items .item h3,
-		.resume .content .section h3,
+		.academics_n_career .content .section h3,
 		.services .content .service h3,
 		.blog .content .post h3 {
 			font-size: 1.5em;
@@ -124,7 +124,7 @@
 		}
 
 		.portfolio .items .item p,
-		.resume .content .section p,
+		.academics_n_career .content .section p,
 		.services .content .service p,
 		.blog .content .post p {
 			font-size: 1em;
@@ -191,7 +191,7 @@
 			PORTFOLIO
 		</a>
 		<a href="#">
-			RESUME
+			academics_n_career
 		</a>
 		<a href="#">
 			ABOUT
@@ -290,9 +290,9 @@
 			</div>
 		</div>
 	</section>
-	<section class="resume">
+	<section class="academics_n_career">
 		<h2>
-			My Resume
+			My academics_n_career
 		</h2>
 		<div class="content">
 			<div class="section">
