--- a/index.html
+++ b/index.html
@@ -326,14 +326,17 @@
 					</a>
 				</div>
 				<div class="item">
-					<img alt="Square Box Mockup" height="300"
+					<img alt="Handwritten classification project" height="300"
 						src="https://storage.googleapis.com/a1aa/image/bDRanFDf4gyvHKFSXQjQNLceL5mNdyL2VuTSR4kDotVxV62TA.jpg"
 						width="300" />
 					<h3>
-						Square Box Mockup
+						Bangla Handwritten Digit Classification Using Raw Image Data
 					</h3>
 					<p>
-						BRANDING
+						In this study, the main focus was to classify Bangla handwritten digits from raw image data. To
+						accomplish this project, a dataset has been made of raw images and a convolutional neural
+						network is also constructed to classify the images. An Alexnet approach (mean value subtraction)
+						was used to normalize the raw images.
 					</p>
 
 				</div>
