--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 				</div>
 				<div class="item">
 					<img alt="Handwritten classification project" height="300"
-						src="https://storage.googleapis.com/a1aa/image/bDRanFDf4gyvHKFSXQjQNLceL5mNdyL2VuTSR4kDotVxV62TA.jpg"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/Bangla%20Digit%20Classification%20img.png?raw=true"
 						width="300" />
 					<h3>
 						Bangla Handwritten Digit Classification Using Raw Image Data
