learn more added

--- a/index.html
+++ b/index.html
@@ -338,7 +338,10 @@
 						network is also constructed to classify the images. An Alexnet approach (mean value subtraction)
 						was used to normalize the raw images.
 					</p>
-
+					<a
+						href="https://github.com/cybercat37794/DeepLearning-projects/tree/main/Bangla%20Digit%20Classification%20Final%20Project">
+						Learn More
+					</a>
 				</div>
 				<div class="item">
 					<img alt="Square Box Mockup" height="300"
