--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
 						Bangla Handwritten Digit Classification Using Raw Image Data
 					</h3>
 					<p>
-						In this study, the main focus was to classify Bangla handwritten digits from raw image data. To
-						accomplish this project, a dataset has been made of raw images and a convolutional neural
+						In this project, the main focus was to classify Bangla handwritten digits from raw image data.
+						To accomplish this project, a dataset has been made of raw images and a convolutional neural
 						network is also constructed to classify the images. An Alexnet approach (mean value subtraction)
 						was used to normalize the raw images.
 					</p>
