new section created

--- a/index.html
+++ b/index.html
@@ -417,6 +417,32 @@
 				</div>
 			</div>
 	</section>
+	<section class="portfolio">
+		<h2>
+			REPORTS
+		</h2>
+		<div class="categories">
+			<div class="items">
+				<div class="item">
+					<img alt="GNN project img" height="300"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/gnn%20project.png?raw=true"
+						width="300" />
+					<h3>
+						Mitigating Racial Bias in Natural Language Understanding with Graph Neural Networks
+					</h3>
+					<p>
+						Natural Language Processing (NLP) models often inherit racial biases present in textual data. By
+						capturing semantic relationships with text, this research investigates the use of Graph Neural
+						Networks (GNNs) to address racial bias in language understanding. Our approach shows how GNNs
+						can be used to mitigate bias and fairly represent minority groups in NLP tasks.
+					</p>
+					<a href="https://github.com/cybercat37794/Debias-Racial-Bias-Using-GNN">
+						Learn More
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section class="academics_n_career">
 		<h2>
 			ACADEMICS & CAREER HISTORY
