--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 					</a>
 				</div>
 				<div class="item">
-					<img alt="Handwritten classification project" height="300"
+					<img alt="Handwritten classification project img" height="300"
 						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/Bangla%20Digit%20Classification%20img.png?raw=true"
 						width="300" />
 					<h3>
@@ -399,7 +399,7 @@
 					</p>
 				</div>
 				<div class="item">
-					<img alt="Car Rental Projct" height="300"
+					<img alt="Car Rental Projct img" height="300"
 						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/car%20rental%20system.png?raw=true"
 						width="300" />
 					<h3>
@@ -428,13 +428,15 @@
 						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/gnn%20project.png?raw=true"
 						width="300" />
 					<h3>
-						Mitigating Racial Bias in Natural Language Understanding with Graph Neural Networks
+						The Impact of Activation Function in Neural Network
 					</h3>
 					<p>
-						Natural Language Processing (NLP) models often inherit racial biases present in textual data. By
-						capturing semantic relationships with text, this research investigates the use of Graph Neural
-						Networks (GNNs) to address racial bias in language understanding. Our approach shows how GNNs
-						can be used to mitigate bias and fairly represent minority groups in NLP tasks.
+						In this paper, various existing activation functions and its impact in deep learning has been
+						discussed, also provided a brief overview about the requirement for activation function and
+						non-linearity in deployment of deep neural networks. Many forms of activation functions and
+						their effectiveness are also discussed. Suitable activation function for specific application is
+						an important matter, and this collecting’s will help making effective decision in case of
+						choosing suitable activation function for specific application.
 					</p>
 					<a href="https://github.com/cybercat37794/Debias-Racial-Bias-Using-GNN">
 						Learn More
