--- a/index.html
+++ b/index.html
@@ -424,11 +424,11 @@
 		<div class="categories">
 			<div class="items">
 				<div class="item">
-					<img alt="GNN project img" height="300"
-						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/gnn%20project.png?raw=true"
+					<img alt="Activation function img" height="300"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/Activation%20Function%20img.png?raw=true"
 						width="300" />
 					<h3>
-						The Impact of Activation Function in Neural Network
+						Academic Report: The Impact of Activation Function in Neural Network
 					</h3>
 					<p>
 						In this paper, various existing activation functions and its impact in deep learning has been
