talkbuzz project add

--- a/index.html
+++ b/index.html
@@ -344,15 +344,23 @@
 					</a>
 				</div>
 				<div class="item">
-					<img alt="Square Box Mockup" height="300"
+					<img alt="TalkBuzz project img" height="300"
 						src="https://storage.googleapis.com/a1aa/image/bDRanFDf4gyvHKFSXQjQNLceL5mNdyL2VuTSR4kDotVxV62TA.jpg"
 						width="300" />
 					<h3>
-						Square Box Mockup
+						TalkBuzz: Web Based Real-Time Chatting Application
 					</h3>
 					<p>
-						BRANDING
+						The aim of this project is to create a web-based chatting application which will allow users to
+						communicate in real time using easily accessible web interfaces. It will be a type of online
+						chat, distinguished by its simplicity and accessibility to the users who do not wish to take the
+						time to install and learn to use specialized chat software. It is an application which will help
+						to communicate with friend using internet. Users have to register and obtain credentials to
+						login into the application.
 					</p>
+					<a href="https://github.com/cybercat37794/TalkBuzz">
+						Learn More
+					</a>
 				</div>
 				<div class="item">
 					<img alt="Product Box Package Mockup" height="300"
