--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 				</div>
 				<div class="item">
 					<img alt="TalkBuzz project img" height="300"
-						src="https://storage.googleapis.com/a1aa/image/bDRanFDf4gyvHKFSXQjQNLceL5mNdyL2VuTSR4kDotVxV62TA.jpg"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/Talkbuzz%20img.png?raw=true"
 						width="300" />
 					<h3>
 						TalkBuzz: Web Based Real-Time Chatting Application
