--- a/index.html
+++ b/index.html
@@ -363,15 +363,21 @@
 					</a>
 				</div>
 				<div class="item">
-					<img alt="Product Box Package Mockup" height="300"
+					<img alt="Blood Bank Management System img" height="300"
 						src="https://storage.googleapis.com/a1aa/image/asu3OXGJ3W5TC1rWGnKf3y62RXIU20YHGTUYoPsB6fHrV62TA.jpg"
 						width="300" />
 					<h3>
-						Product Box Package Mockup
+						Blood Bank Management System
 					</h3>
 					<p>
-						BRANDING
+						The Blood Bank Management System is developed using C# and MS SQL Server, utilizing a 3-tier
+						architecture. Key features include user management, donor registration, and admin controls for
+						donor data. It also offers login functionality and a splash screen animation. The project uses
+						SQL Server Management Studio and Visual Studio.
 					</p>
+					<a href="https://github.com/cybercat37794/C-sharp-project/tree/main/BloodBankManagementSystem">
+						Learn More
+					</a>
 				</div>
 				<div class="item">
 					<img alt="Creative Package Design" height="300"
