--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 				</div>
 				<div class="item">
 					<img alt="Blood Bank Management System img" height="300"
-						src="https://storage.googleapis.com/a1aa/image/asu3OXGJ3W5TC1rWGnKf3y62RXIU20YHGTUYoPsB6fHrV62TA.jpg"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/blood%20bank%20project%20img.png?raw=true"
 						width="300" />
 					<h3>
 						Blood Bank Management System
