covid test managemnt project add

--- a/index.html
+++ b/index.html
@@ -384,10 +384,14 @@
 						src="https://storage.googleapis.com/a1aa/image/LJQ5sjA1ovJZAtmchiB7qB3faCrlyXSDzjebofFtnbYgr0tnA.jpg"
 						width="300" />
 					<h3>
-						Creative Package Design
+						COVID-19 Test Management System Project (Object Oriented Analysis & Design Approach)
 					</h3>
 					<p>
-						BRANDING
+						The system allows users to securely log in with a username and password, offering features like
+						account recovery, optional email registration, and password retrieval via a verification code.
+						Users can apply for COVID-19 testing, share their location via GPS, make payments, and receive
+						test results. The system prioritizes usability, security, and performance, ensuring reliable and
+						efficient operation with high availability and scalability.
 					</p>
 				</div>
 				<div class="item">
