--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
 					</a>
 				</div>
 				<div class="item">
-					<img alt="Creative Package Design" height="300"
-						src="https://storage.googleapis.com/a1aa/image/LJQ5sjA1ovJZAtmchiB7qB3faCrlyXSDzjebofFtnbYgr0tnA.jpg"
+					<img alt="covid test management system img" height="300"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/Covid19%20test%20management%20project.PNG?raw=true"
 						width="300" />
 					<h3>
 						COVID-19 Test Management System Project (Object Oriented Analysis & Design Approach)
