transit management system project

--- a/index.html
+++ b/index.html
@@ -399,10 +399,15 @@
 						src="https://storage.googleapis.com/a1aa/image/Yepe0jBMDjktu0XGueJPUIeSeXkeghXcywL8NvuBntXublu9E.jpg"
 						width="300" />
 					<h3>
-						Packaging Brand
+						Transit Management System using Object-Oriented Analysis & Design Approach
 					</h3>
 					<p>
-						BRANDING
+						The system consists of various components: users, drivers, bus companies, GPS, and QR codes.
+						Users create accounts to search for buses, view routes, stops, and costs, and track buses via
+						real-time GPS on Google Maps. Drivers and bus companies also have accounts, enabling them to
+						manage routes, costs, and notices. QR codes on buses provide detailed information, while the app
+						facilitates communication and feedback between passengers, drivers, and bus companies, ensuring
+						a seamless experience.
 					</p>
 				</div>
 				<div class="item">
