--- a/index.html
+++ b/index.html
@@ -395,8 +395,8 @@
 					</p>
 				</div>
 				<div class="item">
-					<img alt="Packaging Brand" height="300"
-						src="https://storage.googleapis.com/a1aa/image/Yepe0jBMDjktu0XGueJPUIeSeXkeghXcywL8NvuBntXublu9E.jpg"
+					<img alt="Transit management system img" height="300"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Projects%20Graphics/Transit%20management%20system%20img.png?raw=true"
 						width="300" />
 					<h3>
 						Transit Management System using Object-Oriented Analysis & Design Approach
