--- a/index.html
+++ b/index.html
@@ -517,8 +517,11 @@
 					src="https://storage.googleapis.com/a1aa/image/meoR33fZYIm0a0V8kXecoaiQ4Q7dTxZHlCUSVh0JzJ3Ur0tnA.jpg"
 					width="300" />
 				<h3>
-					Creative Product Designer from Facebook
+					Python For Everybody Specialization from University of Michigan
 				</h3>
+				<p>
+					Coursera
+				</p>
 				<p>
 					March 9, 2020
 				</p>
