bangla digit dataset

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 	</section>
 	<section class="portfolio">
 		<h2>
-			REPORTS
+			REPORTS & PUBLICATIONS
 		</h2>
 		<div class="categories">
 			<div class="items">
@@ -450,6 +450,22 @@
 						an important matter, and this collecting’s will help making effective decision in case of
 						choosing suitable activation function for specific application.
 					</p>
+				</div>
+				<div class="item">
+					<img alt="Bangla handwritten dataset" height="300"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20Graphics/Activation%20Function%20img.png?raw=true"
+						width="300" />
+					<h3>
+						Dataset Publish: Bangla Handwritten Digits Dataset(raw image)
+					</h3>
+					<p>
+						This dataset contains 200 Bangla handwritten digit images. All the digits are handwritten on
+						white paper by the author then the images are taken using a smartphone camera. After taking the
+						images extra white areas are cropped.
+					</p>
+					<a href="https://doi.org/10.34740/KAGGLE/DSV/4177273">
+						Dataset Doi
+					</a>
 				</div>
 			</div>
 		</div>
