report and publication thumbnail update

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 			<div class="items">
 				<div class="item">
 					<img alt="Activation function img" height="300"
-						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20Graphics/Activation%20Function%20img.png?raw=true"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20&%20Publication%20Graphics/Activation%20Function%20img.png?raw=true"
 						width="300" />
 					<h3>
 						Academic Report: The Impact of Activation Function in Neural Network
@@ -453,7 +453,7 @@
 				</div>
 				<div class="item">
 					<img alt="Bangla handwritten dataset" height="300"
-						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20Graphics/Activation%20Function%20img.png?raw=true"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20&%20Publication%20Graphics/bangla%20digit%20dataset-cover.png?raw=true"
 						width="300" />
 					<h3>
 						Dataset Publish: Bangla Handwritten Digits Dataset (raw image)
