--- a/index.html
+++ b/index.html
@@ -456,6 +456,23 @@
 						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20&%20Publication%20Graphics/bangla%20digit%20dataset-cover.png?raw=true"
 						width="300" />
 					<h3>
+						Academic Report: Less Skilled People in Internet Service Providing in Bangladesh
+					</h3>
+					<p>
+						The purpose of this report is to present a solution to remove the internet connectivity problem
+						in broadband internet in Bangladesh. To solve this problem, internet service provider (ISP)
+						should open their training programs for their employees. Some government organizations can also
+						take some initiative to remove this problem. A survey has been conducted to collect users'
+						opinions from broadband internet users. After analyzing the collected data, it is found that
+						most broadband users are suffering from internet connectivity problem and agrees with the
+						proposed solutions.
+					</p>
+				</div>
+				<div class="item">
+					<img alt="Bangla handwritten dataset" height="300"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20&%20Publication%20Graphics/bangla%20digit%20dataset-cover.png?raw=true"
+						width="300" />
+					<h3>
 						Dataset Publish: Bangla Handwritten Digits Dataset (raw image)
 					</h3>
 					<p>
