--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 				</div>
 				<div class="item">
 					<img alt="Bangla handwritten dataset" height="300"
-						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20&%20Publication%20Graphics/bangla%20digit%20dataset-cover.png?raw=true"
+						src="https://github.com/cybercat37794/imranahmed/blob/master/Reports%20&%20Publication%20Graphics/Internet%20Service%20report%20img.png?raw=true"
 						width="300" />
 					<h3>
 						Academic Report: Less Skilled People in Internet Service Providing in Bangladesh
