--- a/index.html
+++ b/index.html
@@ -147,18 +147,9 @@
 			gap: 10px;
 		}
 
-		.skill-item {
-			background-color: #333;
-			border-radius: 50%;
-			padding: 10px;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-		}
-
 		.skill-item img {
-			width: 50px;
-			height: 50px;
+			width: 100px;
+			height: 100px;
 			border-radius: 50%;
 		}
 
@@ -755,29 +746,19 @@
 		</h2>
 		<div class="skills-grid">
 			<div class="skill-item">
-				<img alt="Python logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/AzSJfhIN62ydbyWAcI81u6jKbL55PSqFtQpQqy7bxQ9flT3TA.jpg"
-					width="50" />
+				<img alt="Python logo" height="50" src="https://abrudz.github.io/logos/Python.svg" width="50" />
 			</div>
 			<div class="skill-item">
-				<img alt="JavaScript logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/PojqVcMTZto9BNALPG6DsJvCPkx8f4RStyHCod5QBE67yp7JA.jpg"
-					width="50" />
+				<img alt="JavaScript logo" height="50" src="https://abrudz.github.io/logos/JS.svg" width="50" />
 			</div>
 			<div class="skill-item">
-				<img alt="TensorFlow logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/8kLWAk9VsNp8Jpq1Qo1zzYcxCecpvfDfOtp6RCwWJpWOMnunA.jpg"
-					width="50" />
+				<img alt="Matlab logo" height="50" src="https://abrudz.github.io/logos/MatLab.svg" width="50" />
 			</div>
 			<div class="skill-item">
-				<img alt="Angular logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/PCWhQVHCg9JGHBf5GLSZ1vBu46Jh3FhjTMnYRTu4mmAAzp7JA.jpg"
-					width="50" />
+				<img alt="C Sharp logo" height="50" src="https://abrudz.github.io/logos/CSharp.svg" width="50" />
 			</div>
 			<div class="skill-item">
-				<img alt="MongoDB logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/PWIajFxOZkbVPNPAlwfVMKelLvCpRKjMrguN0dnpsQiImT3TA.jpg"
-					width="50" />
+				<img alt="C plus plus logo" height="50" src="https://abrudz.github.io/logos/CPlusPlus.svg" width="50" />
 			</div>
 			<div class="skill-item">
 				<img alt="MySQL logo" height="50"
@@ -785,14 +766,12 @@
 					width="50" />
 			</div>
 			<div class="skill-item">
-				<img alt="Git logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/2ouVfeKocCqf3pGwp0dm4hgQbs80v2hZsrJJ7ERvRGS0LnunA.jpg"
+				<img alt="Github logo" height="50"
+					src="https://github.com/bablubambal/All_logo_and_pictures/blob/main/social%20icons/github.png?raw=true"
 					width="50" />
 			</div>
 			<div class="skill-item">
-				<img alt="Jira logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/x2S1CfE7c1UoWiB9L7xWXP6NweMxH8dI0UytI6gMJ5w7lT3TA.jpg"
-					width="50" />
+				<img alt="Java logo" height="50" src="https://abrudz.github.io/logos/Java.svg" width="50" />
 			</div>
 			<div class="skill-item">
 				<img alt="React logo" height="50"
