--- a/index.html
+++ b/index.html
@@ -746,7 +746,9 @@
 		</h2>
 		<div class="skills-grid">
 			<div class="skill-item">
-				<img alt="Python logo" height="50" src="https://abrudz.github.io/logos/Python.svg" width="50" />
+				<img alt="Python logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/python.png?raw=true"
+					width="50" />
 			</div>
 			<div class="skill-item">
 				<img alt="JavaScript logo" height="50" src="https://abrudz.github.io/logos/JS.svg" width="50" />
