new logos commit

--- a/index.html
+++ b/index.html
@@ -751,13 +751,19 @@
 					width="50" />
 			</div>
 			<div class="skill-item">
-				<img alt="JavaScript logo" height="50" src="https://abrudz.github.io/logos/JS.svg" width="50" />
+				<img alt="Keras logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/keras.png?raw=true"
+					width="50" />
 			</div>
 			<div class="skill-item">
-				<img alt="Matlab logo" height="50" src="https://abrudz.github.io/logos/MatLab.svg" width="50" />
+				<img alt="Tensorflow logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/tensorflow%20logo.png?raw=true"
+					width="50" />
 			</div>
 			<div class="skill-item">
-				<img alt="C Sharp logo" height="50" src="https://abrudz.github.io/logos/CSharp.svg" width="50" />
+				<img alt="Pytorch logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/pytorch.png?raw=true"
+					width="50" />
 			</div>
 			<div class="skill-item">
 				<img alt="C plus plus logo" height="50" src="https://abrudz.github.io/logos/CPlusPlus.svg" width="50" />
