social logo fixed

--- a/index.html
+++ b/index.html
@@ -881,12 +881,12 @@
 					</strong>
 					imranahmed9813@gmail.com
 				</p>
-				<p>
+				<!-- <p>
 					<strong>
 						Phone:
 					</strong>
 					+1 222 222 2222
-				</p>
+				</p> -->
 				<p>
 					<strong>
 						Address:
@@ -901,22 +901,22 @@
 			© 2025. All rights reserved.
 		</p>
 		<div class="social">
-			<a href="#">
+			<!-- <a href="#">
 				<i class="fab fa-facebook-f">
 				</i>
-			</a>
-			<a href="#">
+			</a> -->
+			<!-- <a href="#">
 				<i class="fab fa-twitter">
 				</i>
-			</a>
+			</a> -->
 			<a href="https://www.linkedin.com/in/imran-ahmed-mac-uwindsor/">
 				<i class="fab fa-linkedin-in">
 				</i>
 			</a>
-			<a href="#">
+			<!-- <a href="#">
 				<i class="fab fa-instagram">
 				</i>
-			</a>
+			</a> -->
 			<a href="https://github.com/cybercat37794">
 				<i class="fab fa-github">
 				</i>
