--- a/index.html
+++ b/index.html
@@ -564,6 +564,15 @@
 				</p>
 				<p>
 					<strong>
+						AI Prompt Response Writer (Remote)
+					</strong>
+					<br />
+					September 2024 - December 2024
+					<br />
+					Telus International
+				</p>
+				<p>
+					<strong>
 						Student Intern
 					</strong>
 					<br />
