--- a/index.html
+++ b/index.html
@@ -787,11 +787,28 @@
 					width="50" />
 			</div>
 			<div class="skill-item">
-				<img alt="C plus plus logo" height="50" src="https://abrudz.github.io/logos/CPlusPlus.svg" width="50" />
+				<img alt="C logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/c%20lang.png?raw=true"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="C plus plus logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/cpp.png?raw=true"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="C sharp logo" height="50"
+					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/324629e03f6dbcd294aa75fba1fb93d5dec50ce7/Skills%20Graphics/c%23.svg"
+					width="50" />
 			</div>
 			<div class="skill-item">
 				<img alt="MySQL logo" height="50"
 					src="https://storage.googleapis.com/a1aa/image/14bKoIWGffs4XU36uLKeMQIQHZ1fM2iCHlFAeOTkZ9wCvc6eE.jpg"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="Git logo" height="50"
+					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/324629e03f6dbcd294aa75fba1fb93d5dec50ce7/Skills%20Graphics/git.svg"
 					width="50" />
 			</div>
 			<div class="skill-item">
@@ -828,13 +845,28 @@
 					width="50" />
 			</div>
 			<div class="skill-item">
-				<img alt="Tailwind CSS logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/eoMdFju7WpSFBCVJ1oIaNEPQM3i0362c45DRuB8Up16elT3TA.jpg"
+				<img alt="HTML logo" height="50"
+					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/324629e03f6dbcd294aa75fba1fb93d5dec50ce7/Skills%20Graphics/html.svg"
 					width="50" />
 			</div>
 			<div class="skill-item">
-				<img alt="Svelte logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/QlsGCyculmYSCxBpQzZJzel8TapuzJHnCeSsMLOzGStFmT3TA.jpg"
+				<img alt="CSS logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/css.png?raw=true"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="Javascript logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/javascript.png?raw=true"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="Bootstrap logo" height="50"
+					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/324629e03f6dbcd294aa75fba1fb93d5dec50ce7/Skills%20Graphics/boostrap.svg"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="Android Studio logo" height="50"
+					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/324629e03f6dbcd294aa75fba1fb93d5dec50ce7/Skills%20Graphics/android-studio.svg"
 					width="50" />
 			</div>
 		</div>
