--- a/index.html
+++ b/index.html
@@ -783,6 +783,11 @@
 			</div>
 			<div class="skill-item">
 				<img alt="Pytorch logo" height="50"
+					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/83d7610a609312e5f4aecf10c9d37f1b10f5a7de/Skills%20Graphics/pandas.svg"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="Pandas logo" height="50"
 					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/pytorch.png?raw=true"
 					width="50" />
 			</div>
@@ -860,8 +865,23 @@
 					width="50" />
 			</div>
 			<div class="skill-item">
+				<img alt="PHP logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/php.png?raw=true"
+					width="50" />
+			</div>
+			<div class="skill-item">
 				<img alt="Bootstrap logo" height="50"
 					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/324629e03f6dbcd294aa75fba1fb93d5dec50ce7/Skills%20Graphics/boostrap.svg"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="VS code logo" height="50"
+					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/83d7610a609312e5f4aecf10c9d37f1b10f5a7de/Skills%20Graphics/vscode.svg"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="Intellij logo" height="50"
+					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/83d7610a609312e5f4aecf10c9d37f1b10f5a7de/Skills%20Graphics/intellij.svg"
 					width="50" />
 			</div>
 			<div class="skill-item">
