--- a/index.html
+++ b/index.html
@@ -808,8 +808,8 @@
 			</div>
 			<div class="skill-item">
 				<img alt="MySQL logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/14bKoIWGffs4XU36uLKeMQIQHZ1fM2iCHlFAeOTkZ9wCvc6eE.jpg"
-					width="50" />
+					src="https://storage.googleapis.com/a1aa/image/14bKoIWGffs4XU36uLKeMQIQHZ1fM2iCHlFAeOTkZ9wCvc6eE.jpg""
+					width=" 50" />
 			</div>
 			<div class="skill-item">
 				<img alt="Git logo" height="50"
@@ -822,31 +822,8 @@
 					width="50" />
 			</div>
 			<div class="skill-item">
-				<img alt="Java logo" height="50" src="https://abrudz.github.io/logos/Java.svg" width="50" />
-			</div>
-			<div class="skill-item">
-				<img alt="React logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/tsjXsxI7og5iC1hYpN4S8icZRe7qn19qO0fPKCleYdNEMnunA.jpg"
-					width="50" />
-			</div>
-			<div class="skill-item">
-				<img alt="Redux logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/CRSE3LJISvYLKNbLhqlbPLcdfPliOBtdaPvhI2N676KCzp7JA.jpg"
-					width="50" />
-			</div>
-			<div class="skill-item">
-				<img alt="Node.js logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/PeX9JrXSXDVzC6LzJawRQ0E6KbhOC3oBFOHbxcUMWx6Bzp7JA.jpg"
-					width="50" />
-			</div>
-			<div class="skill-item">
-				<img alt="Django logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/lKfZF7Hw0m2bRaPDlLdoL4IVAQjI26BJImT1WxzOSRjAzp7JA.jpg"
-					width="50" />
-			</div>
-			<div class="skill-item">
-				<img alt="Bootstrap logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/0Q1uQ7dfkP17YCYkDNzFTAtDqgfPo6saqvhB8V7Nyhg8lT3TA.jpg"
+				<img alt="Java logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/java.png?raw=true"
 					width="50" />
 			</div>
 			<div class="skill-item">
@@ -872,6 +849,26 @@
 			<div class="skill-item">
 				<img alt="Bootstrap logo" height="50"
 					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/324629e03f6dbcd294aa75fba1fb93d5dec50ce7/Skills%20Graphics/boostrap.svg"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="Tableau logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/tableau%20logo.png?raw=true"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="Weka logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/weka%20logo.jpg?raw=true"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="Colab logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/google%20colab.png?raw=true"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="Jupyter logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/jupyter%20logo.png?raw=true"
 					width="50" />
 			</div>
 			<div class="skill-item">
