--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
 			</div>
 			<div class="skill-item">
 				<img alt="MySQL logo" height="50"
-					src="https://storage.googleapis.com/a1aa/image/14bKoIWGffs4XU36uLKeMQIQHZ1fM2iCHlFAeOTkZ9wCvc6eE.jpg""
+					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/6c636f65347499a3522a396aff1f710bec50444f/Skills%20Graphics/mysql.svg"
 					width=" 50" />
 			</div>
 			<div class="skill-item">
