--- a/index.html
+++ b/index.html
@@ -807,6 +807,11 @@
 					width="50" />
 			</div>
 			<div class="skill-item">
+				<img alt="Java logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/java.png?raw=true"
+					width="50" />
+			</div>
+			<div class="skill-item">
 				<img alt="MySQL logo" height="50"
 					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/6c636f65347499a3522a396aff1f710bec50444f/Skills%20Graphics/mysql.svg"
 					width=" 50" />
@@ -819,11 +824,6 @@
 			<div class="skill-item">
 				<img alt="Github logo" height="50"
 					src="https://github.com/bablubambal/All_logo_and_pictures/blob/main/social%20icons/github.png?raw=true"
-					width="50" />
-			</div>
-			<div class="skill-item">
-				<img alt="Java logo" height="50"
-					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/java.png?raw=true"
 					width="50" />
 			</div>
 			<div class="skill-item">
@@ -884,6 +884,11 @@
 			<div class="skill-item">
 				<img alt="Android Studio logo" height="50"
 					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/324629e03f6dbcd294aa75fba1fb93d5dec50ce7/Skills%20Graphics/android-studio.svg"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="Autocad logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/autocad.png?raw=true"
 					width="50" />
 			</div>
 		</div>
