--- a/index.html
+++ b/index.html
@@ -877,6 +877,11 @@
 					width="50" />
 			</div>
 			<div class="skill-item">
+				<img alt="Pycharm logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/PyCharm.png?raw=true"
+					width="50" />
+			</div>
+			<div class="skill-item">
 				<img alt="Intellij logo" height="50"
 					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/83d7610a609312e5f4aecf10c9d37f1b10f5a7de/Skills%20Graphics/intellij.svg"
 					width="50" />
