new logo for linux and matlab

--- a/index.html
+++ b/index.html
@@ -862,6 +862,11 @@
 					width="50" />
 			</div>
 			<div class="skill-item">
+				<img alt="Linux logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/linux%20logo.png?raw=true"
+					width="50" />
+			</div>
+			<div class="skill-item">
 				<img alt="Colab logo" height="50"
 					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/google%20colab.png?raw=true"
 					width="50" />
@@ -889,6 +894,11 @@
 			<div class="skill-item">
 				<img alt="Android Studio logo" height="50"
 					src="https://raw.githubusercontent.com/cybercat37794/imranahmed/324629e03f6dbcd294aa75fba1fb93d5dec50ce7/Skills%20Graphics/android-studio.svg"
+					width="50" />
+			</div>
+			<div class="skill-item">
+				<img alt="Matlab logo" height="50"
+					src="https://github.com/cybercat37794/imranahmed/blob/master/Skills%20Graphics/matlab%20logo.png?raw=true"
 					width="50" />
 			</div>
 			<div class="skill-item">
