--- a/index.html
+++ b/index.html
@@ -709,8 +709,12 @@
 					a gateway to new opportunities in the job market.
 				</p>
 				<p>
-					Special Guest:
+					<strong>
+						Special Guest::
+					</strong>
 					Md. Fahim Khan
+				</p>
+				<p>
 					Software Developer at Rocket Innovation Studio
 				</p>
 			</div>
