--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	<link rel="icon"
 		href="https://github.com/cybercat37794/imranahmed/blob/master/page%20graphics/fevicon_on_tab.png?raw=true"
 		type="image/x-icon">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet" />
+	<link
+		href="https://raw.githubusercontent.com/cybercat37794/imranahmed/refs/heads/master/two%20css%20file/all.min.css"
+		rel="stylesheet" />
+	<link href="https://raw.githubusercontent.com/cybercat37794/imranahmed/refs/heads/master/two%20css%20file/css2.css"
+		rel="stylesheet" />
 	<style>
 		body {
 			margin: 0;
